# todoapi

./: .editorconfig  .flake8  LICENSE  Makefile  README.md  pyproject.toml
src/: __init__.py
src/domain/entities/base/: __init__.py  entity.py  id.py
src/domain/ports/: __init__.py  use_case.py
tests/: test_main.py
tests/test_domain/test_entities/: test_base_entity.py
